update to autumn menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -79,10 +79,6 @@
                         <h2 class="subheader">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Bufala e Pomodorini<span class="right">6</span></h3>
-                                <p>mozzarella di bufala, pomodorini e basilico</p>
-                            </li>
-                            <li>
                                 <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
                                 <p>peperoncini piccanti avvolti nella pancetta</p>
                             </li>
@@ -91,24 +87,28 @@
                                 <p>petto di pollo di prima scelta impanato e fritto</p>
                             </li>
                             <li>
+                                <h3>Fagottini di Verza<span class="right">4,5</span></h3>    
+                                <p>con ripieno di zucca</p>
+                            </li>
+                            <li>
+                                <h3>Tris di Mini Muffin<span class="right">4,5</span></h3>    
+                                <p>vegetariani e non</p>
+                            </li>
+                            <li>
+                                <h3>Cavoletti di Buxelles<span class="right">4,5</span></h3>    
+                                <p>brasati alla birra</p>
+                            </li>
+                            <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
                                 <p>patate fritte con la buccia tagliate a rondelle</p>
                             </li>
                             <li>
-                                <h3>Patate Arrosto<span class="right">4</span></h3>    
-                                <p>patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
+                                <h3>Verze<span class="right">2,5</span></h3>
+                                <p>saltate in padella</p>
                             </li>
                             <li>
                                 <h3>Insalata Mista<span class="right">4</span></h3>
                                 <p>verdure di stagione</p>
-                            </li>
-                            <li>
-                                <h3>Verdure Gratinate<span class="right">4</span></h3>
-                                <p>verdure di stagione gratinate e servite fredde</p>
-                            </li>
-                            <li>
-                                <h3>Verdure Grigliate<span class="right">4,5</span></h3>
-                                <p>verdure di stagione grigliate con rosmarino</p>
                             </li>
                             <li>
                                 <h3>Focacce<span class="right">2,5</span></h3>
@@ -121,27 +121,36 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione</small></h2>
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue. Con cotture più lunghe la carne  risulta secca.
+</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
+                                <h3>Beerstrot 360<span class="right">14,5</span></h3>    
+                                <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                            </li>
+                            <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
-                                <p>180 grammi di manzo, cipolla caramellata, insalata, cheddar</p>
+                                <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>    
-                                <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
+                                <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
-                                <p>180 grammi di manzo, pancetta, gorgonzola, pomodorini confit</p>
+                                <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,8</span></a></h3> 
-                                <p>180 grammi di manzo, melanzane, formaggio di capra, rucola</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Autunno<span class="right">8,8</span></a></h3> 
+                                <p>180 grammi di manzo, fontina, funghi di stagione</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
                                 <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
+                            </li>
+                            <li>
+                                <h3>Pollo<span class="right">8,8</span></h3>    
+                                <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
@@ -151,10 +160,6 @@
                                 <h3>Mini Burger<span class="right">6</span></h3>    
                                 <p>100 grammi di manzo</p>
                             </li>
-                            <li>
-                                <h3>Big Burger<span class="right">14,5</span></h3>    
-                                <p>360 grammi di manzo</p>
-                            </li>
                         </ul>                      
                     </div>   
                 </div>
@@ -162,19 +167,15 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Carni <br></h2>
+                        <h2 class="subheader">Zuppe <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine di Maiale<span class="right">11,5</span></a></h3>    
-                                <p>costine di maiale al forno in salsa barbeque servito con patate fritte</p>
+                                <h3>Vellutata di Zucche<span class="right">4,5</span></h3>    
+                                <p>zuppa vegetariana</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
-                            </li>
-                            <li>
-                                <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>fiorentina di manzo da 8 a 13 etti</p>
+                                <h3>Orzetto alla triestina<span class="right">4,5</span></h3>    
+                                <p>zuppa di orzo e speck</p>
                             </li>
                         </ul>                      
                     </div>
@@ -183,14 +184,51 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Carni <br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
+                                <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                            </li>
+                            <li>
+                                <h3>Stinco<span class="right">12</span></h3>    
+                                <p>stinco di maiale al forno servito con purè di patate</p>
+                            </li>
+                            <li>
+                                <h3>Chili<span class="right">7,5</span></h3>    
+                                <p>chili piccante con carne e fagioli servito in pagnotta</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                                <p>alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
+                            </li>
+                            <li>
+                                <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
+                                <p>fiorentina di manzo da 8 a 14 etti. cottura: molto al sangue o al sangue</p>
+                            </li>
+                        </ul>                      
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><!-- <a href="http://beerstrot.it/menu/cibo/cheescake.html"> -->Mousse al Cioccolato<span class="right">5</span><!-- </a> --></h3>
-                                <p>morbida mousse al cioccolato con o senza peperoncino</p>
+                                <h3>Blondy<span class="right">5</span></h3>
+                                <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
                             </li>
                             <li>
-                                <h3><!-- <a href="http://beerstrot.it/menu/cibo/birramisu.html"> -->Panna Cotta<span class="right">5</span><!-- </a> --></h3>
+                                <h3>Birramisù<span class="right">5</span></h3>
+                                <p>tiramisù alla birra stout</p>
+                            </li>
+                            <li>
+                                <h3>Cheescake<span class="right">5</span></h3>
+                                <p>cheescake stile new york</p>
+                            </li>
+                            <li>
+                                <h3>Panna Cotta<span class="right">5</span></h3>
                                 <p>panna cotta alla birra servita con sciroppo d'acero</p>
                             </li>
                         </ul>
