--- a/menu/index.html
+++ b/menu/index.html
@@ -100,7 +100,7 @@
                             </li>
                             <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
-                                <p>patate fritte con la buccia tagliate a rondelle</p>
+                                <p>patate fritte a bastoncini</p>
                             </li>
                             <li>
                                 <h3>Verze<span class="right">2,5</span></h3>
