--- a/menu/index.html
+++ b/menu/index.html
@@ -108,7 +108,7 @@
                             </li>
                             <li>
                                 <h3>Insalata Mista<span class="right">4</span></h3>
-                                <p>verdure di stagione</p>
+                                <p>con verdure di stagione</p>
                             </li>
                             <li>
                                 <h3>Focacce<span class="right">2,5</span></h3>
