--- a/menu/index.html
+++ b/menu/index.html
@@ -121,7 +121,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue. Con cotture più lunghe la carne  risulta secca.
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.
 </small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
