--- a/menu/index.html
+++ b/menu/index.html
@@ -73,7 +73,7 @@
     <div class="tabs-content" id="menupage-text"> 
 <!-- cibo --> 
         <section class="content active" role="tabpanel" aria-hidden="false" id="cibo">
-            <div class="panel-menu-2n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Per Stuzzicare</h2>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.
@@ -164,7 +164,7 @@
                     </div>   
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Zuppe <br></h2>
@@ -174,14 +174,14 @@
                                 <p>zuppa vegetariana</p>
                             </li>
                             <li>
-                                <h3>Orzetto alla triestina<span class="right">4,5</span></h3>    
+                                <h3>Orzetto alla Triestina<span class="right">4,5</span></h3>    
                                 <p>zuppa di orzo e speck</p>
                             </li>
                         </ul>                      
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Carni <br></h2>
@@ -200,7 +200,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
+                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola e verdure</p>
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
@@ -210,7 +210,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
