--- a/menu/index.html
+++ b/menu/index.html
@@ -121,8 +121,10 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.
-</small></h2>
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata
+                        <br>Cottura media o, a richiesta, al sangue
+                        <br>Con cotture più lunghe la carne  risulta secca.</small>
+                        </h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Beerstrot 360<span class="right">14,5</span></h3>    
