--- a/menu/index.html
+++ b/menu/index.html
@@ -143,7 +143,7 @@
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Autunno<span class="right">8,8</span></a></h3> 
+                                <h3>Autunno<span class="right">8,8</span></h3> 
                                 <p>180 grammi di manzo, fontina, funghi di stagione</p>
                             </li>
                             <li>
