--- a/menu/index.html
+++ b/menu/index.html
@@ -121,10 +121,7 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata
-                        <br>Cottura media o, a richiesta, al sangue
-                        <br>Con cotture più lunghe la carne  risulta secca.</small>
-                        </h2>
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Beerstrot 360<span class="right">14,5</span></h3>    
@@ -143,7 +140,7 @@
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Autunno<span class="right">8,8</span></h3> 
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Autunno<span class="right">8,8</span></a></h3> 
                                 <p>180 grammi di manzo, fontina, funghi di stagione</p>
                             </li>
                             <li>
