--- a/menu/index.html
+++ b/menu/index.html
@@ -536,7 +536,19 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></h3>
+                                <h3>Rosso Piceno<span class="right"> Quarto 2,5 | Litro 6</span></h3>
+                                <p>tavignano</p>
+                            </li>
+                            <li>
+                                <h3>Cervidoni Rosso Piceno DOC 2013<span class="right"> 3 | 9</span></h3>
+                                <p>tavignano</p>
+                            </li>
+                            <li>
+                                <h3>Libenter Rosso Piceno DOC 2012<span class="right"> 3,5 | 13</span></h3>
+                                <p>tavignano</p>
+                            </li>
+                            <li>
+                                <h3>Lacrima Morro D’Alba 2014<span class="right"> 3,5 | 11</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
@@ -553,11 +565,19 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></h3>
+                                <h3>Verdicchio Jesi<span class="right"> Quarto 2,5 | Litro 6</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
+                                <h3>Misco Verdicchio Castelli di Jesi DOC Superiore 2014<span class="right"> 3,5 | 13</span></h3>
+                                <p>bisci</p>
+                            </li>
+                            <li>
                                 <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></h3>
+                                <p>bisci</p>
+                            </li>
+                            <li>
+                                <h3>Pecorino Offida DOCG 2014<span class="right"> 3,5 | 11</span></h3>
                                 <p>bisci</p>
                             </li>
                         </ul>
