--- a/menu/index.html
+++ b/menu/index.html
@@ -540,15 +540,15 @@
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Cervidoni Rosso Piceno DOC 2013<span class="right"> 3 | 9</span></h3>
+                                <h3>Cervidoni Rosso Piceno<span class="right"> 3 | 9</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Libenter Rosso Piceno DOC 2012<span class="right"> 3,5 | 13</span></h3>
+                                <h3>Libenter Rosso Piceno<span class="right"> 3,5 | 13</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Lacrima Morro D’Alba 2014<span class="right"> 3,5 | 11</span></h3>
+                                <h3>Lacrima Morro D’Alba<span class="right"> 3,5 | 11</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
@@ -569,7 +569,7 @@
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Misco Verdicchio Castelli di Jesi DOC Superiore 2014<span class="right"> 3,5 | 13</span></h3>
+                                <h3>Misco Verdicchio Jesi<span class="right"> 3,5 | 13</span></h3>
                                 <p>bisci</p>
                             </li>
                             <li>
@@ -577,7 +577,7 @@
                                 <p>bisci</p>
                             </li>
                             <li>
-                                <h3>Pecorino Offida DOCG 2014<span class="right"> 3,5 | 11</span></h3>
+                                <h3>Pecorino Offida<span class="right"> 3,5 | 11</span></h3>
                                 <p>bisci</p>
                             </li>
                         </ul>
@@ -594,11 +594,11 @@
                                 <p>conti di buscareto</p>
                             </li>
                             <li>
-                                <h3>Franciacorta Brut<span class="right">26</span></h3>
-                                <p>mosnel</p>
+                                <h3>Pestifero 37,5cl<span class="right">6</span></h3>
+                                <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Franciacorta Pas Dosè<span class="right">28</span></h3>
+                                <h3>Franciacorta Brut<span class="right">26</span></h3>
                                 <p>mosnel</p>
                             </li>
                             <li>
