--- a/social/index.html
+++ b/social/index.html
@@ -97,13 +97,11 @@
                         <a class="close-reveal-modal">&#215;</a>
                     </div>
                     <article class="row">
-                        <div class="card">
-                            <div class="medium-12 large-12 columns content">
-                                <h4><em>Postato su facebook</em></h4>
-                                <h6 class="by-line-chi-siamo">Scritto l'8 Giugno 2015</h6>  
-                                <blockquote cite="">Io sono praticamente di "casa" abitando a non più di 50 metri di distanza.<br>Garantisco che atmosfera e location sono fantastici sopratutto al tramonto, accompagnato da un ottima Black consigliata dallo splendido e preparato staff.<br>Ringrazio la ragazza che ci ha coccolato in questo viaggio di sapori e profumi sia per la cordialità sia per averci mostrato le sue doti atletiche da centometrista sfoggiate tra una portata e l'altra ‪#‎tonica‬Giulia <br>Grazie mille torniamo presto!.<cite>Marco Palpacelli</cite></blockquote>
-                                <a href="https://www.facebook.com/cavecchiabeerstrot/posts/447722872054571" target="_blank">Leggi l'originale</a>
-                            </div>
+                        <div class="medium-12 large-12 columns extra-space-recensione">
+                            <h4><em>Postato su facebook</em></h4>
+                            <h6 class="by-line-chi-siamo">Scritto l'8 Giugno 2015</h6>  
+                            <blockquote cite="">Io sono praticamente di "casa" abitando a non più di 50 metri di distanza.<br>Garantisco che atmosfera e location sono fantastici sopratutto al tramonto, accompagnato da un ottima Black consigliata dallo splendido e preparato staff.<br>Ringrazio la ragazza che ci ha coccolato in questo viaggio di sapori e profumi sia per la cordialità sia per averci mostrato le sue doti atletiche da centometrista sfoggiate tra una portata e l'altra ‪#‎tonica‬Giulia <br>Grazie mille torniamo presto!.<cite>Marco Palpacelli</cite></blockquote>
+                            <a href="https://www.facebook.com/cavecchiabeerstrot/posts/447722872054571" target="_blank">Leggi l'originale</a>
                         </div>
                         <div class="medium-12 large-12 columns extra-space-recensione">
                             <h4><em>Panorama, cibo (anche per vegetariani) e staff favolosi</em></h4>
