--- a/menu/index.html
+++ b/menu/index.html
@@ -536,7 +536,6 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-<<<<<<< HEAD
                                 <h3>Rosso Piceno<span class="right"> Quarto 2,5 | Litro 6</span></h3>
                                 <p>tavignano</p>
                             </li>
@@ -550,9 +549,6 @@
                             </li>
                             <li>
                                 <h3>Lacrima Morro D’Alba<span class="right"> 3,5 | 11</span></h3>
-=======
-                                <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></h3>
->>>>>>> parent of a0f5178... fix
                                 <p>tavignano</p>
                             </li>
                             <li>
@@ -569,11 +565,10 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></h3>
+                                <h3>Verdicchio Jesi<span class="right"> Quarto 2,5 | Litro 6</span></h3>
                                 <p>tavignano</p>
                             </li>
                             <li>
-<<<<<<< HEAD
                                 <h3>Misco Verdicchio Jesi<span class="right"> 3,5 | 13</span></h3>
                                 <p>bisci</p>
                             </li>
@@ -585,11 +580,6 @@
                                 <h3>Pecorino Offida<span class="right"> 3,5 | 11</span></h3>
                                 <p>bisci</p>
                             </li>
-=======
-                                <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></h3>
-                                <p>bisci</p>
-                            </li>
->>>>>>> parent of a0f5178... fix
                         </ul>
                     </div>
                 </div>
