--- a/menu/index.html
+++ b/menu/index.html
@@ -570,7 +570,7 @@
                             </li>
                             <li>
                                 <h3>Misco Verdicchio Jesi<span class="right"> 3,5 | 13</span></h3>
-                                <p>bisci</p>
+                                <p>tavignano</p>
                             </li>
                             <li>
                                 <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></h3>
@@ -578,7 +578,7 @@
                             </li>
                             <li>
                                 <h3>Pecorino Offida<span class="right"> 3,5 | 11</span></h3>
-                                <p>bisci</p>
+                                <p>tavignano</p>
                             </li>
                         </ul>
                     </div>
