--- a/menu/index.html
+++ b/menu/index.html
@@ -619,8 +619,8 @@
                                 <p>conti di buscareto</p>
                             </li>
                             <li>
-                                <h3>Passito di Verdicchio<span class="right">24</span></h3>
-                                <p>col di corte 50cl</p>
+                                <h3>Passito di Verdicchio 50cl<span class="right">24</span></h3>
+                                <p>col di corte</p>
                             </li>
                         </ul>
                     </div>
