--- a/menu/index.html
+++ b/menu/index.html
@@ -157,7 +157,7 @@
                             </li>
                             <li>
                                 <h3>Mini Burger<span class="right">6</span></h3>    
-                                <p>100 grammi di manzo</p>
+                                <p>100 grammi di manzo, cheddar</p>
                             </li>
                         </ul>                      
                     </div>   
@@ -173,7 +173,7 @@
                                 <p>zuppa vegetariana</p>
                             </li>
                             <li>
-                                <h3>Orzetto alla Triestina<span class="right">4,5</span></h3>    
+                                <h3>Orzetto alla Trentina<span class="right">4,5</span></h3>    
                                 <p>zuppa di orzo e speck</p>
                             </li>
                         </ul>                      
@@ -199,7 +199,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola e verdure</p>
+                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
