--- a/menu/index.html
+++ b/menu/index.html
@@ -95,7 +95,7 @@
                                 <p>vegetariani e non</p>
                             </li>
                             <li>
-                                <h3>Cavoletti di Buxelles<span class="right">4,5</span></h3>    
+                                <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>    
                                 <p>brasati alla birra</p>
                             </li>
                             <li>
