--- a/menu/index.html
+++ b/menu/index.html
@@ -203,7 +203,7 @@
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>fiorentina di manzo da 8 a 14 etti. cottura: molto al sangue o al sangue</p>
+                                <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
                             </li>
                         </ul>                      
                     </div>
