--- a/menu/index.html
+++ b/menu/index.html
@@ -244,36 +244,36 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>MC77 Mild the Gap<span class="right"> 4 | 6</span></h3>
-                                <p>scura stile inglese 4,5%</p>
+                                <h3>Birrificio Dei Castelli Repetita Iuvant<span class="right"> 4 | 6</span></h3>
+                                <p>season 6,5%</p>
                             </li>
                             <li>
-                                <h3>MC77 Ape Regina<span class="right"> 4 | 6</span></h3>
-                                <p>blond al miele 6,9%</p>
+                                <h3>Birrificio Dei Castelli Palmares<span class="right"> 4 | 6</span></h3>
+                                <p>ale rossa 6,5%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Tribbius<span class="right"> 4 | 6</span></h3>
-                                <p>dunkel rossa 4,6%</p>
+                                <h3>MC77 Sofronia<span class="right"> 4 | 6</span></h3>
+                                <p>blanche con ibisco 5%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Pils<span class="right"> 4 | 6</span></a></h3>
-                                <p>pils 5,4</p>
+                                <h3>MC77 Punto<span class="right"> 4 | 6</span></a></h3>
+                                <p>session IPA 3,9%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller PSE<span class="right"> 4 | 6</span></a></h3>
+                                <h3>MC77 Breaking Hops<span class="right"> 4 | 6</span></h3>
+                                <p>doppia IPA 7,2%</p>
+                            </li>
+                            <li>
+                                <h3>Monkey Pale Ale<span class="right"> 4 | 6</span></a></h3>
+                                <p>belgian pale ale 6%</p>
+                            </li>
+                            <li>
+                                <h3>Mukkeller PSE<span class="right"> 4 | 6</span></h3>
                                 <p>golden ale 5,6%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Mazzu de Fiori<span class="right"> 4 | 6</span></h3>
-                                <p>IPA 6%</p>
-                            </li>
-                            <li>
-                                <h3>Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
-                                <p>light IPA 4,9%</p>
-                            </li>
-                            <li>
-                                <h3>Emiliano Pomposa<span class="right"> 4 | 6</span></h3>
-                                <p>rossa 6,1%</p>
+                                <h3>Emiliano Snoopy<span class="right"> 4 | 6</span></h3>
+                                <p>pils/blanche 4,1%</p>
                             </li>
                         </ul>
                     </div>
