--- a/menu/index.html
+++ b/menu/index.html
@@ -244,11 +244,11 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Birrificio Dei Castelli Repetita Iuvant<span class="right"> 4 | 6</span></h3>
+                                <h3>Castelli Repetita Iuvant<span class="right"> 4 | 6</span></h3>
                                 <p>season 6,5%</p>
                             </li>
                             <li>
-                                <h3>Birrificio Dei Castelli Palmares<span class="right"> 4 | 6</span></h3>
+                                <h3>Castelli Palmares<span class="right"> 4 | 6</span></h3>
                                 <p>ale rossa 6,5%</p>
                             </li>
                             <li>
