--- a/menu/index.html
+++ b/menu/index.html
@@ -215,7 +215,7 @@
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Blondy<span class="right">5</span></h3>
+                                <h3>Blondie<span class="right">5</span></h3>
                                 <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
                             </li>
                             <li>
@@ -223,8 +223,8 @@
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3>Cheescake<span class="right">5</span></h3>
-                                <p>cheescake stile new york</p>
+                                <h3>Cheesecake<span class="right">5</span></h3>
+                                <p>cheesecake stile new york</p>
                             </li>
                             <li>
                                 <h3>Panna Cotta<span class="right">5</span></h3>
